/**
 * Copyright (C) 2011-2013 Barchart, Inc. <http://www.barchart.com/>
 *
 * All rights reserved. Licensed under the OSI BSD License.
 *
 * http://www.opensource.org/licenses/bsd-license.php
 */

// Non-java (C, C++, etc) package name space.
package barchart_inst;

// Builder options.
option java_package = "com.barchart.proto.buf.inst";
option java_outer_classname = "PacketSpec";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

// Message and Field.
import "MessageSpec.proto";

// Packet type for instrument.
enum PacketType {
	INSTRUMENT = 3;
}

// Instrument definition packet with header.
message InstrumentPacket {

	// Packet channel number.
	// Globally unique in data feed.
	optional sint32 channel = 1;

	optional sint64 sequence = 2;

	// Packet send time.
	// millisFIX, UTC
	optional sint64 timeStamp = 3;

	// Packet body type selector.
	optional PacketType type = 4;

	// Ordered instrument definition list.
	repeated InstrumentDefinition definition = 5;
}

// Instrument definition packet without header, used as codec.
message InstrumentMessageCodec {

	// Ordered instrument definition list.
	repeated InstrumentDefinition message = 5;
}
